Small comment rewording

--- a/texfiles/dissertation.tex
+++ b/texfiles/dissertation.tex
@@ -93,7 +93,7 @@
 {\addvspace{\baselineskip}\captionsetup{type=listing}}
 {\addvspace{\baselineskip}}
 
-% stop things from jumping across to pages too much.
+% allow maths to break across pages
 \allowdisplaybreaks
 
 \begin{document}
