Added pdf comparison to preamble comparison

--- a/marketplace/preamble_compr.tex
+++ b/marketplace/preamble_compr.tex
@@ -69,11 +69,23 @@
 \caption{Original preamble, from commit \texttt{1bc2c47}}
 \end{longlisting}
 
+\begin{center}
+\fbox{
+\includegraphics[height=0.7\textheight]{old_disp3.pdf}
+}
+\end{center}
+
 \newpage
 
 \begin{longlisting}
 \inputminted{latex}{new_preamble}
 \caption{Updated preamble, from commit \texttt{6c4c392}}
 \end{longlisting}
+
+\begin{center}
+\fbox{
+\includegraphics[height=0.7\textheight]{new_disp6.pdf}
+}
+\end{center}
 
 \end{document}
